--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             2004, sou estudante de Ciência da Computação na instituição 
             Atitus em Passo Fundo - RS. Sou uma pessoa proativa, com muito gosto por novas experiências, 
             estou sempre em busca de conhecimento, tenho um ótimo relacionamento social, adoro conhecer
-            novas pessoas e meu hobby número 1 é viajar! Fluente em Inglês, já comprovado por viagens 
+            novas pessoas e meu hobby número 1 é viajar e ler! 
+            <p>Fluente em Inglês, já comprovado por viagens haha
         consigo me comunicar muito bem em Espanhol, mesmo não tendo aprofundamento meus estudos no idioma 
     após a escola e nos dias atuais estou estudando Francês. </p>
             <p>Atualmente busco oportunidades de emprego relacionadas à minha área de estudo, que é
@@ -38,8 +39,8 @@
             pela Atitus para os alunos do curso de Ciência da Computação, <b>Bytes & Beers</b>, os temas abordados
         foram Datatomic, Circuit Breakers e Microsegmentação,Etna e PAM, com carga horária de 4 horas. </p>
 
+      <img class="w-100" src=""https://i.pinimg.com/736x/ea/dc/79/eadc79b245732eacb707d18100d040f6.jpg"" alt="" />
              <p>Aqui está um pouco sobre mim e as minhas experiências profissionais. </p>
-        <img class="w-100" src="C:\Users\laura\Downloads\WhatsApp Image 2024-09-14 at 14.24.15.jpg" alt="" />
 
         <section id="projetos">
             <h2>Experiências Profissionais</h2>
