--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         foram Datatomic, Circuit Breakers e Microsegmentação,Etna e PAM, com carga horária de 4 horas. </p>
 
       <img class="w-100" src=""https://i.pinimg.com/736x/ea/dc/79/eadc79b245732eacb707d18100d040f6.jpg"" alt="" />
-             <p>Aqui está um pouco sobre mim e as minhas experiências profissionais. </p>
+             <p>Aqui está mais um pouco sobre mim e as minhas experiências profissionais. </p>
 
         <section id="projetos">
             <h2>Experiências Profissionais</h2>
