Update2 index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             estou sempre em busca de conhecimento, tenho um ótimo relacionamento social, adoro conhecer
             novas pessoas e meu hobby número 1 é viajar e ler! 
             <p>Fluente em Inglês, já comprovado por viagens haha
-        consigo me comunicar muito bem em Espanhol, mesmo não tendo aprofundamento meus estudos no idioma 
-    após a escola e nos dias atuais estou estudando Francês. </p>
+        consigo me comunicar muito bem em Espanhol, e nos dias atuais estou estudando Francês. </p>
             <p>Atualmente busco oportunidades de emprego relacionadas à minha área de estudo, que é
                 também a minha realização acadêmica. Desde o dia que entrei na área, não consegui mais 
                 me ver fora dela. 
