--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Atitus em Passo Fundo - RS. Sou uma pessoa proativa, com muito gosto por novas experiências, 
             estou sempre em busca de conhecimento, tenho um ótimo relacionamento social, adoro conhecer
             novas pessoas e meu hobby número 1 é viajar e ler! 
-            <p>Fluente em Inglês, já comprovado por viagens haha
+            <p>Fluente em Inglês, já comprovado por viagens  
         consigo me comunicar muito bem em Espanhol, e nos dias atuais estou estudando Francês. </p>
             <p>Atualmente busco oportunidades de emprego relacionadas à minha área de estudo, que é
                 também a minha realização acadêmica. Desde o dia que entrei na área, não consegui mais 
@@ -38,7 +38,7 @@
             pela Atitus para os alunos do curso de Ciência da Computação, <b>Bytes & Beers</b>, os temas abordados
         foram Datatomic, Circuit Breakers e Microsegmentação,Etna e PAM, com carga horária de 4 horas. </p>
 
-      <img class="w-100" src=""https://i.pinimg.com/736x/ea/dc/79/eadc79b245732eacb707d18100d040f6.jpg"" alt="" />
+      <img class="w-100" src="https://i.pinimg.com/736x/ea/dc/79/eadc79b245732eacb707d18100d040f6.jpg" alt="Minha Imagem" />
              <p>Aqui está mais um pouco sobre mim e as minhas experiências profissionais. </p>
 
         <section id="projetos">
@@ -66,8 +66,8 @@
             <div class="projeto">
                 <h3>Experiência 3</h3>
                 <p>Minha terceira experiência foi no setor de Marketing e Comunicação da Universidade do Vale 
-                    do Taquari, na qual atuei como Auxiliar de Marketing e Comunicação, realizando atendimentos 
-                    diretos com os possíveis alunos e candidatos interessados em ingressar na universidade. Ampliando
+                    do Taquari, na qual atuei como Auxiliar de Marketing e Comunicação, realizando atendimento 
+                    direto com os possíveis alunos e candidatos interessados em ingressar na universidade. Ampliando
                     ainda mais minhas habilidades de comunicação e atendimento ao público. 
                 </p>
             </div>
