--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <p>Atualmente busco oportunidades de emprego relacionadas à minha área de estudo, que é
                 também a minha realização acadêmica. Desde o dia que entrei na área, não consegui mais 
                 me ver fora dela. 
+                Concluindo a primeira etapa na minha jornada acadêmica, recebi a qualificação em <b>Desenvolvimento de Aplicações JR</b>,
+                totalizando 400h de aprendizado intenso.
+                Desenvolvi competências em: Pensamento Computacional, Inteligência Artificial e Análise de Dados e Desafio da Profissão.
             </p>
             <p>Possuo alguns certificados na área como o curso de <b>Python Básico</b> com carga horária 
             de 8 horas. Certificado do evento <b>Start Empreendedor: Cases de Sucesso para Impulsionar
